// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package workflows.v1;

import "workflow.proto";
import "common_carbide.proto";
import "forge_carbide.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/nvidia/bare-metal-manager-rest/workflow-schema/proto";

// InstanceInfo - response for instance cloud requests
message InstanceInfo {
  WorkflowStatus status = 1;
  ObjectStatus object_status = 2;
  string status_msg = 3;
  forge.Instance instance = 4;
}

// InstanceUserData
message InstanceUserData {
  string user_data = 1;
  string custom_ipxe = 2;
}

// CreateInstanceRequest - request to create an Instance
message CreateInstanceRequest {
  common.MachineId machine_id = 1;
  // Deprecated
  repeated string ssh_keys = 2;
  string tenant_org = 3;
  repeated forge.InstanceInterfaceConfig interfaces = 4;

  // Optionals
  optional string custom_ipxe = 5;
  optional string user_data = 6;

  // Workflow Options
  optional WorkflowOptions options = 7;

  // Tenant Keysets for SOL
  repeated string tenant_keyset_ids = 8;

  common.UUID instance_id = 9;

  optional bool always_boot_with_custom_ipxe = 10;

  // InfiniBand Interfaces
  repeated forge.InstanceIBInterfaceConfig ib_interfaces = 11;

  // Instance metadata info with labels configuration
  forge.Metadata metadata = 12;

  // If this flag is set to true` the instance will not transition to a Ready state until
  // InstancePhoneHomeLastContact is updated
  bool phone_home_enabled = 13;

}

// DeleteInstanceRequest - request to delete an Instance
message DeleteInstanceRequest {
  common.UUID instance_id = 1;
  // Workflow Options
  optional WorkflowOptions options = 8;
}

// RebootInstanceRequest - request for power cycling the machine of the Instance
message RebootInstanceRequest {
  common.MachineId machine_id = 1;
  bool boot_with_custom_ipxe = 2;

  // Workflow Options
  optional WorkflowOptions options = 3;

  // If this flag is true, first update will be performed and then host will be rebooted.
  bool apply_updates_on_reboot = 4;
}

// InstanceRebootInfo - response for the power cycle request
message InstanceRebootInfo {
  WorkflowStatus status = 1;
  ObjectStatus object_status = 2;
  string status_msg = 3;
  common.MachineId machine_id = 4;
}

// InstanceInventory - inventory info of all Instances periodically collected
message InstanceInventory {
  // List of Instances
  repeated forge.Instance instances = 1;
  // List of Instance propagation details
  repeated forge.NetworkSecurityGroupPropagationObjectStatus network_security_group_propagations = 6;
  // Reported timestamp of Instance inventory
  google.protobuf.Timestamp timestamp = 2;
  // Status of Inventory
  InventoryStatus inventory_status = 3;
  string status_msg = 4;
  // Inventory page information
  InventoryPage inventory_page = 5;
}
